# chatbox

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/plans/: implement_chatbox_79787394.plan.md  web_ai_chatbot_plan_e121fef0.plan.md
backend/app/: main.py
backend/app/api/: routes_chat.py  routes_files.py  routes_session.py
backend/app/core/: chunker.py  config.py  embeddings.py  llm_client.py  llm_deepseek.py  llm_gemini.py  prompt_builder.py
backend/app/db/: database.py  models.py  repo.py
backend/app/services/: chat_service.py  rag_service.py  session_service.py
backend/app/utils/: file_parser.py
frontend/: app.js  index.html  styles.css
tests/: conftest.py
tests/api/: test_chat_and_files.py  test_sessions.py
tests/core/: test_chunker.py
tests/services/: test_chat_service.py  test_session_service.py
